[package]
name = "steam_lobbybot"
version = "0.2.1"
authors = ["naksu <naksu@youzen.ext.b2.fi>"]

[dependencies]
env_logger = "~0.4"
kankyo = "~0.1"
log = "~0.3"
reqwest = "~0.9"
preferences = "1.1.0"
lazy_static = "^0.2.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.7.2"
url_serde = "0.2.0"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework"]
version = "0.5"

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
